link_insertion_readme

--- a/SLP_PIMA_BinaryClassification.ipynb
+++ b/SLP_PIMA_BinaryClassification.ipynb
@@ -545,7 +545,7 @@
    "metadata": {},
    "source": [
     "### Activation Function: Sigmoid\n",
-    "### Optimizer: Stochastic Gardient Descent\n",
+    "### Optimizer: Stochastic Gradient Descent\n",
     "### Loss Function: Binary Cross-Entropy"
    ]
   },
